--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+console_error_panic_hook = "0.1.7"
 leptos = { version = "0.6.9", features = ["csr", "nightly"] }
+stylance = { version = "0.3.0", features = ["nightly"] }
+stylers = "0.3.2"
