--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-rocket = "0.5.0"
-sqlx = { version = "0.7.4", features = ["postgres"] }
+rocket = { version = "0.5.0", features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
