--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 leptos = { version = "0.6.9", features = ["csr", "nightly"] }
-stylance = { version = "0.3.0", features = ["nightly"] }
+reqwest = { version = "0.12.0", features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 stylers = "0.3.2"
+tokio = { version = "1.36.0", features = ["rt"] }
