--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,4 +9,4 @@ dotenv = "0.15.0"
 rocket = { version = "0.5.0", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
+sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
